# nonebot-plugin-ayaka

./: .env  .env.dev  .gitignore  .gitmodules  __init__.py  _dont_readme.md  abot.py  all_state.json  ayaka.py  ayaka_setting.json  ayaka_test  bot.py  clean.py  nbot.py  pyproject.toml  readme.md  requirements.txt  test.json  test.py
adapter/: __init__.py  utils.py
ayaka/: __init__.py  ayaka.py  ayaka_args.py  ayaka_chain.py  ayaka_input.py  ayaka_json.py  ayaka_master.py  ayaka_parser.py  ayaka_v5.py  bot.py  box.py  cache.py  config.py  constant.py  db.py  deal.py  driver.py  group.py  help.py  helpers.py  init.py  input.py  json_ctrl.py  lazy.py  log.py  logger.py  master.py  on.py  orm.py  parser.py  patch.py  playwright.py  state.py  storage.py  tortoise.py  trigger.py  utils.py
ayaka/adapter/: __init__.py  utils.py
ayaka/core/: bot.py  deal.py
ayaka/depend/: __init__.py  cache.py  db.py  depend.py  input.py  sql.py
ayaka/driver/: __init__.py  ayakabot_driver.py  logger.py  msg_type.py  nonebot_driver.py  onebot.py
ayaka/extension/: __init__.py  decorator.py  timer.py  user.py  user_input.py
ayaka/fuck sqlalchemy/: orm.py  readme.md
ayaka/model/: __init__.py  bot.py  device.py  plugin.py  storage.py  trigger.py
ayaka/plugins/: __init__.py  bag.py  bet.py  checkin.py  echo.py  help.py  reboot.py  record.py  state.py  utils.py  valid.py
ayaka/v5/: ayaka_v5.py  (+2 more)
ayaka_test/: __init__.py  constant.py  core.py  cqhttp.py  sample.py  terminal.py  utils.py
core/: __init__.py  deal.py
db/: musics.json  ncm_cache.json  ncm_setting.json
docs/: ayaka.html  index.html  search.js
plugins/: echo.py  help.py  星际旅行-ayaka.py  星际旅行-nb.py  星际旅行.py
script/: 0.ini  0.txt  1.ini  10.ini  11.ini  12.ini  13.ini  14.ini  15.ini  16.ini  2.ini  3.ini  4.ini  5.ini  6.ini  7.ini  8.ini  9.ini  a.ini
scripts/: echo.ini
(+80 files in other folders)
