[tool.poetry]
name = "nonebot_plugin_ayaka"
version = "1.0.1b2"
description = "为nonebot插件开发提供状态机支持"
authors = ["Su <wxlxy316@163.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://bridgel.github.io/ayaka_doc/"
repository = "https://github.com/bridgeL/nonebot-plugin-ayaka"
packages = [
    { include = "ayaka" }
]


[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = "^2.0.0b5"
nonebot-adapter-onebot = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.nonebot]
plugins = []
plugin_dirs = []
